# higher-functors

./: .travis.yml  CHANGELOG.md  README.md  README.me  default.nix  higher-functors.cabal
src/Data/: HAdjunction.hs  HApplicative.hs  HContravariant.hs  HDistributive.hs  HFunctor.hs  HMonad.hs  HProfunctor.hs  HRepresentable.hs  HTraversable.hs  NaturalTransformation.hs
src/Data/Adjunction/: Higher.hs
src/Data/Applicative/: Higher.hs
src/Data/Comonad/: Higher.hs
src/Data/Comonad/Higher/: Cofree.hs
src/Data/Distributive/: Higher.hs
src/Data/Function/: Higher.hs
src/Data/Functor/: Higher.hs
src/Data/Functor/Higher/: Applied.hs  Compose.hs  Const.hs  Contravariant.hs  Fix.hs  Identity.hs  Rep.hs  Tensor.hs  Yoneda.hs
src/Data/HFunctor/: Semi.hs  Trans.hs
src/Data/HTraversable/: Semi.hs
src/Data/Monad/: Higher.hs
src/Data/Monad/Higher/: Free.hs
src/Data/Profunctor/: Higher.hs
src/Data/Traversable/: Higher.hs
